<resources>
    <string name="app_name">Rust Detector</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_out_the_rust_we_make_it_easy">Map out the rust, We make it easy</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_result">Image Result</string>
    <string name="get_result">Get Result</string>
    <string name="upload_image">Upload Image</string>
    <string name="preview_of_uploaded_image">Preview of Uploaded Image</string>
    <string name="result_image">Result Image</string>
    <string name="banner_image">Banner Image</string>
    <string name="download_result">Download Result</string>
    <string name="enter_email">Enter email</string>
    <string name="login">Login</string>
    <string name="go_to_register">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_background">login background</string>
    <string name="enter_password">Enter password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_message">Error Message</string>
    <string name="please_connect_to_active_network_first">Please connect to active network first</string>
</resources>