<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            android:padding="8dp"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:background="?attr/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginVertical="24dp"
                    android:layout_marginHorizontal="36dp"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="42dp"
                        android:text="@string/app_name"
                        android:textSize="28sp"
                        android:textFontWeight="600"
                        android:textColor="@color/white"
                        tools:targetApi="p" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/map_out_the_rust_we_make_it_easy"
                        android:textSize="18sp"
                        android:textFontWeight="400"
                        android:textColor="@color/white"
                        tools:targetApi="p" />

                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="132dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_undraw_app_data_re_vg5c"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center|end"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="15dp"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/banner_image" />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_card_white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/layoutImage"
            android:elevation="36dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/tvLabelImagePreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    style="@style/TextLabel"
                    android:text="@string/image_preview"/>

                <ImageView
                    android:id="@+id/imageViewPreviewUploadedImage"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_undraw_photograph_re_up3b"
                    android:contentDescription="@string/preview_of_uploaded_image" />

                <Button
                    android:id="@+id/buttonGetResult"
                    android:background="@drawable/bg_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="36dp"
                    android:text="@string/get_result"/>

                <TextView
                    android:id="@+id/tvLabelImageResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    style="@style/TextLabel"
                    android:text="@string/image_result"/>

                <ImageView
                    android:id="@+id/imageViewResult"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_undraw_analyze_17kw"
                    android:contentDescription="@string/result_image" />

                <Button
                    android:id="@+id/buttonDownloadResult"
                    android:background="@drawable/bg_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="42dp"
                    android:text="@string/download_result"/>
            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButtonUploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_photo_alternate_24"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/upload_image" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>